--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "semi": false,
   "singleQuote": true,
+  "semi": true,
+  "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 80
 }
