--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "@types/uuid": "^9.0.7",
     "framer-motion": "^10.18.0",
+    "axios": "^1.6.5",
     "next": "14.0.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
