:wrench:[chore]: nextUI설정

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     ]
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
