--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "express": "^4.18.2",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
