--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "cookie": "^0.6.0",
     "express": "^4.18.2",
     "@types/uuid": "^9.0.7",
+    "axios": "^1.6.5",
+    "cookie": "^0.6.0",
+    "express": "^4.18.2",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
