--- a/package.json
+++ b/package.json
@@ -22,19 +22,21 @@
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "@nextui-org/react": "^2.2.9",
+    "@types/uuid": "^9.0.7",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "swiper": "^11.0.5",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/cookie": "^0.6.0",
-    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
