:sparkles: [feat] : swiper 라이브러리 설치, tailwind scrollbar hide 설치

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.18.2",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.5",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
