--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
     "import/prefer-default-export": "off",
     "react/require-default-props": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "react/function-component-definition": [
       2,
       { "namedComponents": ["arrow-function", "function-declaration"] }
