--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "swiper": "^11.0.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
