--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^10.18.0",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
+    "express": "^4.18.2",
     "next": "14.0.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
