:wrench:[config]: editor.js 라이브러리 설치 및 초기설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "next.config.js",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "EditorTools.js"
   ],
   "exclude": ["node_modules"]
 }
