--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
     "node": true,
     "es6": true
   },
-  "ignorePatterns": ["node_modules/"],
+  "ignorePatterns": ["node_modules/", "EditorTools"],
   "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
