--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     ]
   },
   "dependencies": {
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/editorjs": "^2.28.2",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/paragraph": "^2.11.3",
+    "@editorjs/simple-image": "^1.6.0",
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "express": "^4.18.2",
+    "editorjs-html": "^3.4.3",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
