--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "cookie": "^0.6.0",
     "express": "^4.18.2",
     "@types/uuid": "^9.0.7",
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/editorjs": "^2.28.2",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/paragraph": "^2.11.3",
+    "@editorjs/simple-image": "^1.6.0",
     "editorjs-html": "^3.4.3",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
