--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,7 @@
     "next.config.js",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "EditorTools.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
