:recycle:[refactor]: Editor관련 모듈, 코드 삭제 및 DND초기 설정

--- a/package.json
+++ b/package.json
@@ -18,29 +18,28 @@
     ]
   },
   "dependencies": {
-    "@editorjs/attaches": "^1.3.0",
-    "@editorjs/editorjs": "^2.28.2",
-    "@editorjs/link": "^2.6.2",
-    "@editorjs/paragraph": "^2.11.3",
-    "@editorjs/simple-image": "^1.6.0",
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "express": "^4.18.2",
     "editorjs-html": "^3.4.3",
+    "@types/uuid": "^9.0.7",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "swiper": "^11.0.5",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
