--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
-    "@types/uuid": "^9.0.7",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
@@ -27,8 +26,7 @@
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "swiper": "^11.0.5",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "uuid": "^9.0.1"
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
