--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-slick": "^0.30.1",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.6",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.1"
   },
