--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
-    "@types/uuid": "^9.0.7",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "editorjs-html": "^3.4.3",
@@ -33,8 +32,7 @@
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "uuid": "^9.0.1"
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
