--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@types/react-paginate": "^7.1.4",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "express": "^4.18.2",
@@ -27,6 +28,7 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "react-slick": "^0.30.1",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
