--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@types/react-paginate": "^7.1.4",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
-    "editorjs-html": "^3.4.3",
     "express": "^4.18.2",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "react-slick": "^0.30.1",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
