--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
     "no-useless-catch": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "import/prefer-default-export": "off",
     "react/require-default-props": "off",
     "@typescript-eslint/no-unused-vars": "off",
