--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "cookie": "^0.6.0",
     "express": "^4.18.2",
     "framer-motion": "^10.18.0",
+    "js-base64": "^3.7.7",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
