--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-slick": "^0.30.1",
     "react-toastify": "^10.0.4",
     "recoil": "^0.7.7",
+    "sharp": "^0.33.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
     "tailwind-scrollbar-hide": "^1.1.7"
