--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@types/react-paginate": "^7.1.4",
+    "aws-sdk": "^2.1591.0",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "express": "^4.18.2",
