--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
     "import/prefer-default-export": "off",
     "react/require-default-props": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "react-hooks/exhaustive-deps": "off",
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "react/function-component-definition": [
       2,
