:recycle:[refactor]: console 제거 및 이전 마이페이지 menu state 캐싱 제거

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
     "node": true,
     "es6": true
   },
-  "ignorePatterns": ["node_modules/", "EditorTools"],
+  "ignorePatterns": ["node_modules/", "EditorTools", "postcss.config.js"],
   "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
